<resources>
    <string name="app_name">TweetSearch</string>
    <string name="gps">Tweet Search would like to use your location to find local tweets near you</string>
    <string name="not_now">Not Now</string>
    <string name="enable">Enable</string>
    <string name="search_hint">The Flash</string>
    <string name="message_no_location_permission_snackbar">
        Please allow Tweet Search permission to access your location in order to look up the forecast.</string>
    <string name="settings">Settings</string>
    <string name="granted">Permission Granted</string>
    <string name="deny">Permission Denied</string>
    <string name="app_title">Tweet Search</string>
    <string name="invalid_search">Invalid Search</string>
    <string name="main_act_sub_title">Search for tweets</string>
    <string name="main_act_title">Search For Tweets</string>
    <string name="btn_search">Look Up Tweets</string>
    <string name="search_error_msg">No search results found or a network error has occurred. \n\nPlease try another search.</string>
    <string name="low_temp_title">Low: </string>
    <string name="humid">Humidity: </string>
    <string name="visable">Visibility: </string>
    <string name="lock_on">LOCK ON TARGET?</string>
    <string name="felsius">Celsius</string>
    <string name="currently_title">Currently: </string>
    <string name="feels_like_title">Feels Like: </string>
    <string name="h_temp">High: </string>

    <string name="precip_title">Precipitation: </string>

    <string name="base_url">https://api.twitter.com/</string>
    <string name="no_results">No Results found for your search</string>
    <string name="msg_error_key">msgKey</string>
    <string name="twt_id">twtId</string>
    <string name="twt_txt">twtTxt</string>
    <string name="user_id">userId</string>
    <string name="date_time_format">EEE MMM dd HH:mm:ss ZZZZZ yyyy</string>
    <string name="hrs">" hrs ago"</string>
    <string name="sec">" sec ago"</string>
    <string name="mins">" mins ago"</string>
    <string name="days">" days ago"</string>
    <string name="weeks">" weeks ago"</string>
    <string name="ok_btn">ok</string>
    <string name="twt_prompt">Tweet Selected</string>
    <string name="search_result_title">Search Results</string>
    <string name="geo">GEO</string>
    <string name="data">DATA</string>
    <string name="rply_btn_text">Reply</string>
    <string name="twt_id_prmpt">Tweet ID:</string>
    <string name="tweet_txt">Tweet Txt:</string>
    <string name="author_id">Author ID:</string>
    <string name="twt_search_hint">Batman vs Superman</string>


</resources>
