<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="kalan.ozan.weathercodechallenge.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

    <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/profile_layout_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/main_act_title"
            android:textSize="@dimen/xxlg_txt"
            />

    <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/edge_padding"
            android:layout_marginLeft="@dimen/edge_padding"
            android:layout_below="@+id/title_text"
            android:drawableEnd="@drawable/ic_clear_text"
            android:drawablePadding="@dimen/edge_padding"
            android:padding="@dimen/edge_padding"
            android:background="@android:color/white"
            android:textSize="@dimen/sm_text"
            android:hint="@string/twt_search_hint"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            />

    <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/profile_layout_height"
            android:layout_marginTop="@dimen/lg_btn_margin"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/search_field"
            android:text="@string/btn_search"
            />

</RelativeLayout>
