<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginStart="@dimen/edge_padding"
              android:layout_marginEnd="@dimen/edge_padding">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">


    <TextView
                android:id="@+id/user_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edge_padding"
                android:layout_marginEnd="@dimen/menu_padding"
                android:layout_gravity="center"
                android:text="@string/author_id"/>
        
        <TextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
                android:id="@+id/tweet_id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edge_padding"
                android:layout_marginEnd="@dimen/menu_padding"
                android:layout_gravity="center"
                android:text="@string/twt_id_prmpt"/>

        <TextView
                android:id="@+id/tweet_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
                android:id="@+id/tweet_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edge_padding"
                android:layout_marginEnd="@dimen/menu_padding"
                android:layout_gravity="center"
                android:text="@string/tweet_txt"/>

        <TextView
                android:id="@+id/tweet_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
    </LinearLayout>



</LinearLayout>